front-end/src/css/menus.css
.menu {
  margin-top: 10vh;
}

/* Glyph, by Harry Roberts */

hr.style-two {
  border: 0;
  height: 1px;
  background-image: linear-gradient(
    to right,
    rgba(0, 0, 0, 0),
    rgba(0, 0, 0, 0.75),
    rgba(0, 0, 0, 0)
  );
}

.menu h2 {
  font-size: 40px;
}

.google-map {
  width: 60vw;
}

.book-button {
  margin-top: 50px;
  margin-bottom: 50px;
}

.footer {
  height: 100px;
  background-color: #3e3c3d;
  margin-top: 40px;
}

.card-img-top {
  width: 100%;
  height: 30vh;
  object-fit: cover;
}

.menu-font {
  font-size: 90px;
  letter-spacing: 0.5px;
}

h1,
h2,
h3,
h4,
h5,
.font400 {
  font-family: "Open Sans", sans-serif;
}

.hr-margin {
  margin-top: 5rem;
  margin-bottom: 3rem;
}

.map-margin {
  margin-top: 56px;
}

@media screen and (max-width: 1000px) {
  .menu-font {
    font-size: 70px;
  }
}

